# gpu-bartender

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gpu-calculator-3.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
.github/workflows/: frontend.yml
examples/: example.py  test_gpu_bartender.code-workspace
frontend/: README.md  package-lock.json  package.json  server.ts  tsconfig.json  webpack.config.js
frontend/src/: main.ts
frontend/src/backend/: calculator.ts  dataArgs.ts  loraArgs.ts
frontend/src/frontend/: index.html
frontend/src/static/: index.html
frontend/src/styles/: styles.css
gpu_bartender/: __init__.py  calculator.py  data_args.py  finetuning_args.py  model_args.py  optimizer_args.py  package.json  server.ts  tsconfig.json  webpack.config.js
gpu_bartender/server/: __init__.py  app.py  calculator.py  device_args.py  model_args.py
gpu_bartender/src/: finetuningArgs.ts  modelArgs.ts
gpu_bartender/src/backend/: optimizerArgs.ts
gpu_bartender/src/frontend/: index.html  scripts.ts  styles.css  tsconfig.json
python_ver/: calculator.py  optimizer_args.py
